--- a/test.Rmd
+++ b/test.Rmd
@@ -7,6 +7,7 @@ output:
 ---
 
 This is the first R MarkDown Document we created at CGC under the guidance of Jeff
+The document is used to create document with R Code
 
 # Section 1
 
