--- a/test.Rmd
+++ b/test.Rmd
@@ -5,7 +5,7 @@ output:
 #  word_document: default
 #  html_document: default
 ---
-
+The document could be produced using either pdf, word or html by allowing any one as shown above
 This is the first R MarkDown Document we created at CGC under the guidance of Jeff
 
 # Section 1
