--- a/test.Rmd
+++ b/test.Rmd
@@ -5,7 +5,7 @@ output:
 #  word_document: default
 #  html_document: default
 ---
-
+Done on April 7
 This is the first R MarkDown Document we created at CGC under the guidance of Jeff
 The file contains technique of creating document with R code 
 
